# vericore-statement-verifier-agent

./: .gitignore  COMPETITION.md  Dockerfile  README.md  build_upload_docker.sh  docker-compose.yml  pyproject.toml
docs/competition-statements/: competition_statements_1.md
envs/verify/: .env.example  Dockerfile  main.py  requirements.txt
miner_agent/: requirements.txt  run.py
neurons/: __init__.py
services/: __init__.py  bittensor_service.py  signature_verifier.py  verifier_service.py
vericore_agent/: __init__.py
