[project]
name = "vericore_agent"
version = "0.1.0"
description = "A Bittensor subnet agent for statement verification, corroboration, and refutation with evidence-based analysis"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.11",
    "bittensor>=9.9.0",
    "bittensor-cli>=9.10.1",
    "click>=8.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.110.1,<0.111.0",
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[project.scripts]
neurons = "neurons:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vericore_agent", "neurons", "services"]

[tool.uv.sources]
vericore = { path = ".", editable = true }

